# minkowski-loss

./: .gitignore  MINKOWSKI_DOCS.md  README.md  config.yaml  pyproject.toml
configs/: ddpm.yaml  unet_analytical.yaml  unet_emulator.yaml
eval_results/emulator/: grouped_metrics.csv  r2_matrix.csv
eval_results/inversion/: inversion_large_storm_Constrained.npz  inversion_no_storm_Constrained.npz  inversion_small_storm_Constrained.npz  inversion_summary.yaml
scripts/evaluate/: eval_baselines.py  eval_emulator.py  eval_inversion.py
scripts/hpc/: env.sh  launch_ddpm.sh  launch_emulator.sh  launch_evaluation.sh  launch_preprocessing.sh  launch_unet_analytical.sh  launch_unet_emulator.sh  submit_ablation.sh  submit_sr_experiments.sh
scripts/preprocess/: apply_mixup.py  compute_gamma_targets.py  compute_persistence_thresholds.py  download_dem.sh  generate_metadata.py  preprocess_data.py  split_metadata.py
scripts/train/: train_ddpm.py  train_emulator.py  train_unet_analytical.py  train_unet_emulator.py
src/: __init__.py  utils.py
src/data/: anomaly_score.py  augmentation.py  datasets.py  gamma.py  metadata.py  preprocessing.py
src/evaluation/: baselines.py  inversion.py  jacobian.py  metrics.py  training_metrics.py
src/losses/: minkowski.py
src/models/: ddpm.py  diffusion.py  emulators.py  flow_matching.py  unet.py
src/trainers/: base.py  ddpm.py  emulator.py  unet_analytical.py  unet_emulator.py
tests/: test_analytical_minkowski.py  test_datasets.py  test_gamma.py  test_losses.py  test_models.py  test_preprocessing.py  validate_phase1.py
