[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mink-ddpm"
version = "1.0.0"
description = "Emulating non-differentiable Minkowski functionals via knowledge-guided learning"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Filippo Quarenghi", email = "filippo.quarenghi@gmail.com"},
]

dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "zarr>=2.14,<3",
    "gudhi>=3.8",
    "tqdm",
    "optuna>=3.0",
    "xarray",
    "rasterio",
    "seaborn",
    "statsmodels",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
